# pydigilent

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  capture.py  gpio_toggle.py  power.py  pyproject.toml  release.sh  setup.cfg
pydigilent/: __init__.py  dwf.py
samples/: capture.py
