[metadata]
name = pydigilent
version = 0.0.2
author = James Devine
author_email = james_a_devine@outlook.com
description = An object-oriented library for digilent hardware written in python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamesadevine/pydigilent
project_urls =
    Bug Tracker = https://github.com/jamesadevine/pydigilent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pydigilent
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pydigilent