[metadata]
name = pydigilent
version = 0.0.4
author = James Devine
description = An object-oriented library for digilent hardware written in python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamesadevine/pydigilent
project_urls =
    Bug Tracker = https://github.com/jamesadevine/pydigilent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires = ["matplotlib>=3.5.1", "numpy>=1.22.2", "pyvisa>=1.11.3"]

[options]
packages = pydigilent
python_requires = >=3.6